tests/rosetta/out/Java/cholesky-decomposition-1.error
javac error: exit status 1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:15: error: cannot find symbol
    static Map<String,any> makeSym(int order, List<? extends Number> elements) {
                      ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:18: error: cannot find symbol
    static List<List<Double>> unpackSym(Map<String,any> m) {
                                                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:66: error: cannot find symbol
    static void printSym(Map<String,any> m) {
                                    ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:69: error: cannot find symbol
    static void printLower(Map<String,any> m) {
                                      ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:92: error: cannot find symbol
    static Map<String,any> choleskyLower(Map<String,any> a) {
                                                    ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:92: error: cannot find symbol
    static Map<String,any> choleskyLower(Map<String,any> a) {
                      ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:134: error: cannot find symbol
    static void demo(Map<String,any> a) {
                                ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:16: error: cannot find symbol
        return new OrderEle(order, elements);
                   ^
  symbol:   class OrderEle
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:19: error: cannot find symbol
        Map<String,any> n = m.get("order");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:20: error: cannot find symbol
        Map<String,any> ele = m.get("ele");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:56: error: incompatible types: String cannot be converted to Number
                line = line + ((Number)String.valueOf(((List)m.get(i)).get(j))).doubleValue();
                                                     ^
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:57: error: bad operand types for binary operator '-'
                if (j < ((Number)((Number)m.get(i).size()).doubleValue() - 1).doubleValue()) {
                                                                         ^
  first type:  Number
  second type: int
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:70: error: cannot find symbol
        Map<String,any> n = m.get("order");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:71: error: cannot find symbol
        Map<String,any> ele = m.get("ele");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:93: error: cannot find symbol
        Map<String,any> n = a.get("order");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:94: error: cannot find symbol
        Map<String,any> ae = a.get("ele");
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:107: error: cannot find symbol
            Map<String,any> e = ae.get(i);
                       ^
  symbol:   class any
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:117: error: bad operand types for binary operator '*'
                    le.set(j, ((Number)le.get(j)).doubleValue() + ((Number)d * ((Number)le.get(cx)).doubleValue()).doubleValue());
                                                                             ^
  first type:  Number
  second type: double
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:132: error: cannot find symbol
        return new OrderEle(n, le);
                   ^
  symbol:   class OrderEle
  location: class CholeskyDecomposition1
/tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java:138: error: cannot find symbol
        Map<String,any> l = choleskyLower(a);
                   ^
  symbol:   class any
  location: class CholeskyDecomposition1
Note: /tmp/TestMochiToJavacholesky-decomposition-13935201937/001/CholeskyDecomposition1.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
